# ponderada-gabs

./: README.md  terraform.tfstate  terraform.tfstate.backup
docs/: mkdocs.yml  pyproject.toml
docs/docs/: about.md  extra.css  index.md
docs/site/: 404.html  index.html
docs/site/about/: index.html
docs/site/search/: search_index.json
